force-app/main/default/objects/Avana_Api_details__mdt/Avana_Api_details__mdt.object-meta.xml
<CustomObject>
    <label>Avana Api detail</label>
    <pluralLabel>Avana Api details</pluralLabel>
</CustomObject>