force-app/main/default/objects/Avana_Api_details__mdt/fields/msg_type__c.field-meta.xml
<CustomField>
    <fullName>msg_type__c</fullName>
    <description>What kind of msg u want to send 4 for unicode 1 for normal text</description>
    <label>msg_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>