force-app/main/default/objects/Avana_Api_details__mdt/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <type>TextArea</type>
</CustomField>