force-app/main/default/objects/Avana_Api_details__mdt/fields/smsfrom__c.field-meta.xml
<CustomField>
    <fullName>smsfrom__c</fullName>
    <description>smsfrom is the registered name of api details</description>
    <label>smsfrom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>